# alternet

./: .gitignore  README.md  pixi.toml  pyproject.toml  requirements.txt
configs/: MAGNet_NF.yaml  config_template.yaml
src/: aggregate_grnboost.py  create_config.py  downstream_analysis.py  inference.py  load_data.py  magnet.py  total_pipeline.py  utils_database.py  utils_network.py
src/alternet/: aggregate_grnboost.py  alternet_tutorial.ipynb  create_config.py  data_preprocessing.py  downstream_analysis.py  gene_transcripts_expanded.gv  gtex_dataloader.py  inference.py  io.py  load_data.py  magnet.py  tf_utils.py  utils_network.py
src/alternet/arboreto_added/: core.py
src/alternet/utils/: create_config.py
