[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alternet"
version = "0.1.0"
description = "A Python package for efficient approximate GRN FDR control."
readme = "README.md"
license = {text = "GNU GPL v3.0"}
authors = [
  { name = "Your Name", email = "you@example.com" }
]
dependencies = [
  # List runtime dependencies here
  "requests >=2.0",
]