[workspace]
authors = ["Juliane Hoffmann <juliane.hoffmann@fau.de>", "Anne Hartebrodt <anne.hartebrodt@fau.de>"]
channels = ["conda-forge"]
name = "alternet"
platforms = ["linux-64"]
version = "0.1.0"
preview = ["pixi-build"]

[tasks]
install-kernel = "python -m ipykernel install --user --name pixi_alternet --display-name pixi_alternet"

[dependencies]
python = "3.11.8.*"
pip = ">=25.1.1,<26"
ipykernel = ">=6.29.5,<7"
plotly = ">=6.1.2,<7"
requests = ">=2.0"

[pypi-dependencies]
lda = "==3.0.0"
numpy = "==1.26.4"
scipy = "==1.12.0"
pandas = "==1.5.0"
scanpy = "==1.8.2"
matplotlib = "==3.6.3"
arboreto = "==0.1.6"
networkx = "==3.2.1"
igraph = "==0.11.8"
gseapy = "==0.10.8"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alternet"
version = "0.1.0"
description = "A Python package for efficient approximate GRN FDR control."
readme = "README.md"
license = {text = "GNU GPL v3.0"}
authors = [
  { name = "Juliane Hoffmann", email = "juliane.hoffmann@fau.de" },
  { name = "Anne Hartebrodt", email = "anne.hartebrodt@fau.de" },
]
